--- a/cloud-config.yaml
+++ b/cloud-config.yaml
@@ -33,7 +33,7 @@ runcmd:
 #  - [ chmod, +x, install.sh ]
 #  - ./install.sh
 
-#  - 'wget https://download.jetbrains.com/toolbox/jetbrains-toolbox-1.18.7609.tar.gz -O /run/jetbrains-toolbox.tar.gz'
+#  - 'wget -q https://download.jetbrains.com/toolbox/jetbrains-toolbox-1.18.7609.tar.gz -O /run/jetbrains-toolbox.tar.gz'
 #  - 'tar -xzf /run/jetbrains-toolbox.tar.gz -C /opt/'
   
 power_state:
